tests/gen-test/test_out/swap-macro-parse-out.txt
error: expected 'struct' | 'fn' | 'spec' | 'enum' | 'impl' | '#' but got Macro
 --> swap-macro\root.ctl:1:2030
  |
1 | #[water_drop] ; enum [T] Option { Some : T ; None ; } ; struct LastToken { last : MacroToken ; } ; struct TwoTokens { first : MacroToken ; second : MacroToken ; } ; enum Swap { Two : TwoTokens ; Last : LastToken ; Empty ; } ; #[water_drop] ; struct MacroLexer ; impl MacroLexer { fn next(ml : ^ MacroLexer) -> MacroToken => ctl_next_token(ml) ; } ; struct Span { start : u32 ; end : u32 ; } ; #[water_drop] ; enum MacroTokenKind {     Func ; Type ; Return ; Use ; Extern ; If ; Elif ; Else ; For ; Break ;     Continue ; Let ; Struct ; Spec ; Enum ; Mut ; Impl ; As ; Match ; Pub ;     Priv ; Const ; Comma ; Colon ; Dot ; RightArrow ; ThickRightArrow ;     DoubleColon ; Hash ; DoubleHash ; BackSlash ; DoubleDot ; Tilde ;     LeftCurly ; RightCurly ; LeftParen ; RightParen ; LeftBracket ;     RightBracket ; Label ; Ident ; Int ; String ; Bool ; Char ; Comment ;     Space ; Operator : u8 ; NewLine ; Error ; Eof ; None ; } ; struct MacroToken { kind : MacroTokenKind ; span : Span ; } ; fn "default" malloc(size : uint) -> ^ () extern ; fn "default" free(ptr : ^ ()) extern ; #[compile_time] ; fn "default" ctl_next_token(lexer : ^ MacroLexer) -> MacroToken extern ; #[water_drop] ; spec TokenMacro {     fn new() -> ^ Self ; fn start(s : ^ Self, lexer : ^ MacroLexer) -> Option     [^ Self] ; fn next(s : ^ Self, lexer : ^ MacroLexer) -> Option     [MacroToken] ; fn clear(s : ^ Self) ; fn drop(s : ^ Self) ; } ; impl TokenMacro for Swap {     fn new() -> ^ Self => cast(malloc(sizeof\[Self] ())) ; fn     start(s : ^ Self, lexer : ^ MacroLexer) -> Option [^ Self]     {         * s =\Two ~\{ first : lexer.next() ; second : lexer.next() ; } ;        \Some ~ s     } ; fn next(s : ^ Self, lexer : ^ MacroLexer) -> Option [MacroToken] =>     Option\Some ~ match * s     {        \Two ~\{ first, second }         { * s =\Last ~\{ last : first } ; second } ;\Last ~\        { last } { * s =\Empty ; last } ;\Empty => return\None ;     } ; fn clear(s : ^ Self) {} ; fn drop(s : ^ Self) => free(cast(s)) ; } ; break ; #[entry] ; swap! swap! fn -> main uint => 0 ;
  |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              ^^^^^ token located here
  |
  = info: list -> item

